--- a/.drone.yml
+++ b/.drone.yml
@@ -39,6 +39,11 @@ steps:
   image: toolhippie/molecule:latest
   pull: always
   environment:
+    OS_INTERFACE: public
+    OS_IDENTITY_API_VERSION: 3
+    OS_REGION_NAME: RegionOne
+    OS_USER_DOMAIN_NAME: Default
+
     OS_AUTH_URL:
       from_secret: openstack_auth_url
     OS_PROJECT_ID:
