--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,7 +3,7 @@
 # @meta author:value: [Thomas Boerger](https://github.com/tboerger)
 # @meta description: >
 # [![Source Code](https://img.shields.io/badge/github-source%20code-blue?logo=github&logoColor=white)](https://github.com/rolehippie/fzf)
-# [![Build Status](https://img.shields.io/drone/build/rolehippie/fzf?logo=drone)](https://cloud.drone.io/rolehippie/fzf)
+# [![Build Status](https://img.shields.io/drone/build/rolehippie/fzf/master?logo=drone)](https://cloud.drone.io/rolehippie/fzf)
 # [![License: Apache-2.0](https://img.shields.io/github/license/rolehippie/fzf)](https://github.com/rolehippie/fzf/blob/master/LICENSE)
 #
 # Ansible role to install the command-line fuzzy finder.
@@ -25,6 +25,7 @@ galaxy_info:
   platforms:
     - name: Ubuntu
       versions:
+        - bionic
         - focal
   galaxy_tags:
     - fuzzy
