--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,7 +3,9 @@
 # @meta author:value: [Thomas Boerger](https://github.com/tboerger)
 # @meta description: >
 # [![Source Code](https://img.shields.io/badge/github-source%20code-blue?logo=github&logoColor=white)](https://github.com/rolehippie/fzf)
-# [![Build Status](https://img.shields.io/drone/build/rolehippie/fzf/master?logo=drone)](https://cloud.drone.io/rolehippie/fzf)
+# [![Testing Build](https://github.com/rolehippie/fzf/workflows/testing/badge.svg)](https://github.com/rolehippie/fzf/actions?query=workflow%3Atesting)
+# [![Readme Build](https://github.com/rolehippie/fzf/workflows/readme/badge.svg)](https://github.com/rolehippie/fzf/actions?query=workflow%3Areadme)
+# [![Galaxy Build](https://github.com/rolehippie/fzf/workflows/galaxy/badge.svg)](https://github.com/rolehippie/fzf/actions?query=workflow%3Agalaxy)
 # [![License: Apache-2.0](https://img.shields.io/github/license/rolehippie/fzf)](https://github.com/rolehippie/fzf/blob/master/LICENSE)
 #
 # Ansible role to install the command-line fuzzy finder.
