--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,10 +1,14 @@
 # Standards: 1.2
 ---
 # @var fzf_static_version:description: Version of the static release
+# renovate: datasource=github-releases depName=junegunn/fzf-bin
 fzf_static_version: 0.21.1
 
+# @var fzf_binary_arch:description: Architecture of the static binary
+fzf_binary_arch: "{{ 'arm8' if ansible_architecture == 'aarch64' else 'amd64' }}"
+
 # @var fzf_binary_download:description: URL to download the static binary
-fzf_binary_download: https://github.com/junegunn/fzf-bin/releases/download/{{ fzf_static_version }}/fzf-{{ fzf_static_version }}-linux_amd64.tgz
+fzf_binary_download: https://github.com/junegunn/fzf-bin/releases/download/{{ fzf_static_version }}/fzf-{{ fzf_static_version }}-linux_{{ fzf_binary_arch }}.tgz
 
 # @var fzf_wrapper_download:description: URL to download the tmux wrapper
 fzf_wrapper_download: https://raw.githubusercontent.com/junegunn/fzf/{{ fzf_static_version }}/bin/fzf-tmux
