--- a/meta/main.yml
+++ b/meta/main.yml
@@ -20,6 +20,8 @@
 # None
 # @end
 galaxy_info:
+  role_name: fzf
+  namespace: rolehippie
   author: Thomas Boerger
   description: Ansible role to install the command-line fuzzy finder
   license: Apache-2.0
