docs: use more generic badge for galaxy

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,7 +7,7 @@
 # [![Readme Workflow](https://github.com/rolehippie/fzf/actions/workflows/readme.yml/badge.svg)](https://github.com/rolehippie/fzf/actions/workflows/readme.yml)
 # [![Galaxy Workflow](https://github.com/rolehippie/fzf/actions/workflows/galaxy.yml/badge.svg)](https://github.com/rolehippie/fzf/actions/workflows/galaxy.yml)
 # [![License: Apache-2.0](https://img.shields.io/github/license/rolehippie/fzf)](https://github.com/rolehippie/fzf/blob/master/LICENSE)
-# [![Ansible Role](https://img.shields.io/ansible/role/51415)](https://galaxy.ansible.com/rolehippie/fzf)
+# [![Ansible Role](https://img.shields.io/badge/role-rolehippie.fzf-blue)](https://galaxy.ansible.com/rolehippie/fzf)
 #
 # Ansible role to install the command-line fuzzy finder.
 #
