--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Install required packages
   when: ansible_distribution_version is version('19.10', '>=')
-  package:
+  ansible.builtin.package:
     name: fzf
     state: present
   tags:
@@ -9,7 +9,7 @@
 
 - name: Install static binary
   when: ansible_distribution_version is version('19.04', '<=')
-  unarchive:
+  ansible.builtin.unarchive:
     src: "{{ fzf_binary_download }}"
     dest: /usr/bin
     remote_src: True
@@ -21,7 +21,7 @@
 
 - name: Install tmux wrapper
   when: ansible_distribution_version is version('19.04', '<=')
-  get_url:
+  ansible.builtin.get_url:
     url: "{{ fzf_wrapper_download }}"
     dest: /usr/bin/fzf-tmux
     owner: root
